--- a/Útiles/fast-mark-down-0.1.0/language-configuration.json
+++ b/Útiles/fast-mark-down-0.1.0/language-configuration.json
@@ -11,12 +11,13 @@
         ["(", ")"],
         ["'", "'"],
         ["/math", "\n\n/exit"],
-        ["/code", "\n\n/exit"],
+        ["/python", "\n\n/exit"],
         ["//", "//"],
         ["/-", "/-"],
         ["/s", "/s"],
         ["/S", "/S"],
-        ["\"", "\""]
+        ["\"", "\""],
+        ["/ipy", "/ipy"]
     ],
     "surroundingPairs": [
         ["{", "}"],
@@ -24,11 +25,12 @@
         ["(", ")"],
         ["'", "'"],
         ["/math", "\n/exit"],
-        ["/code", "\n/exit"],
+        ["/python", "\n/exit"],
         ["//", "//"],
         ["/-", "/-"],
         ["/s", "/s"],
         ["/S", "/S"],
-        ["\"", "\""]
+        ["\"", "\""],
+        ["/ipy", "/ipy"]
     ]
 }
