añadido fastmarkdown extension

--- a/Útiles/fast-mark-down-2.1.1/language-configuration.json
+++ b/Útiles/fast-mark-down-2.1.1/language-configuration.json
@@ -1,5 +1,7 @@
 {
-    "comments": {},
+    "comments": {
+        "blockComment": ["#>>>", "<<<#"]
+    },
     "brackets": [
         ["{", "}"],
         ["[", "]"],
@@ -10,27 +12,30 @@
         ["[", "]"],
         ["(", ")"],
         ["'", "'"],
-        ["/math", "\n\n/exit"],
         ["/python", "\n\n/exit"],
         ["//", "//"],
         ["/-", "/-"],
         ["/s", "/s"],
         ["/S", "/S"],
         ["\"", "\""],
-        ["/ipy", "/ipy"]
+        ["/ipy", "/ipy"],
+        ["/_", "/_"],
+        ["¿", "?"],
+        ["¡", "!"]
     ],
     "surroundingPairs": [
         ["{", "}"],
         ["[", "]"],
         ["(", ")"],
         ["'", "'"],
-        ["/math", "\n/exit"],
-        ["/python", "\n/exit"],
+        ["/python", "/exit"],
         ["//", "//"],
         ["/-", "/-"],
         ["/s", "/s"],
         ["/S", "/S"],
         ["\"", "\""],
-        ["/ipy", "/ipy"]
+        ["/ipy", "/ipy"],
+        ["/_", "/_"],
+        ["/__", "/__"]
     ]
 }
