--- a/Útiles/fast-mark-down-2.1.1/package.json
+++ b/Útiles/fast-mark-down-2.1.1/package.json
@@ -1,17 +1,18 @@
 {
     "engines": {
-        "vscode": "^1.93.1"
+        "vscode": "^1.94.0"
     },
     "name": "fastmarkdown",
     "displayName": "FastMarkDown",
-    "description": "FastMarkDown is a custom language designed to enhance your coding experience in Markdown, enabling faster and more efficient writing with syntax highlighting and other features.",
-    "version": "0.1.0",
+    "description": "FastMarkDown is a custom language designed to enhance your coding experience in Markdown, enabling faster and more efficient writing with syntax highlighting and standardized formatting.",
+    "version": "2.1.1",
     "publisher": "Alejandro_Vaz",
     "contributes": {
         "languages": [{
             "id": "fmd",
             "extensions": [".fmd"],
-            "aliases": ["FastMarkDown"]
+            "aliases": ["FastMarkDown"],
+            "configuration": "./language-configuration.json"
         }],
         "grammars": [{
             "language": "fmd",
