--- a/Útiles/fastmarkdown-2.3.0/language-configuration.json
+++ b/Útiles/fastmarkdown-2.3.0/language-configuration.json
@@ -21,7 +21,8 @@
         ["/ipy", "/ipy"],
         ["/_", "/_"],
         ["¿", "?"],
-        ["¡", "!"]
+        ["¡", "!"],
+        ["#>>>", "<<<#"]
     ],
     "surroundingPairs": [
         ["{", "}"],
@@ -36,7 +37,8 @@
         ["\"", "\""],
         ["/ipy", "/ipy"],
         ["/_", "/_"],
-        ["/__", "/__"]
+        ["/__", "/__"],
+        ["#>>>", "<<<#"]
     ],
     "colorizedBracketPairs": [
         [
@@ -52,17 +54,12 @@
             "}"
         ]
     ],
+    "autoCloseBefore": "",
     "folding": {
         "offSide": false,
         "markers": {
-            "h1": {
-                "start": "/h1",
-                "end": "/h1",
-            },
-            "h2": {
-                "start": "/h2",
-                "end": "/h2"
-            }
-        },
-    },
+            "start": "/h1",
+            "end": "$"
+        }
+    }
 }
